[gd_scene load_steps=6 format=3 uid="uid://bwx7676ylv54k"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_hu5xu"]
[ext_resource type="PackedScene" uid="uid://b0lmqubdnq56k" path="res://bg_0.tscn" id="2_msbpq"]
[ext_resource type="FontFile" uid="uid://8n2j0x5tijeu" path="res://fonts/Xolonium-Regular.ttf" id="2_rqw05"]
[ext_resource type="PackedScene" uid="uid://dk2wuywkul47e" path="res://bg_1.tscn" id="3_igfr3"]
[ext_resource type="PackedScene" uid="uid://celr4cct78p0q" path="res://forced_event_miinimized.tscn" id="32_dp5ps"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hu5xu")
anim0 = ExtResource("2_msbpq")
anim1 = ExtResource("3_igfr3")

[node name="Node" type="Node" parent="."]

[node name="BG0" parent="Node" instance=ExtResource("2_msbpq")]

[node name="Grid-BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 24.0
offset_right = 834.0
offset_bottom = 78.0
color = Color(0.341176, 0.341176, 0.341176, 0)

[node name="GridContainer" type="GridContainer" parent="Grid-BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="Time-BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -322.0
offset_top = 72.0
offset_right = -111.0
offset_bottom = 134.0
grow_horizontal = 0
theme_type_variation = &"YearPanel"

[node name="TimeLabel" type="Label" parent="Time-BG"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -24.5
offset_right = 2.0
offset_bottom = 3.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "1990
"

[node name="YearLabel" type="Label" parent="Time-BG"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -23.0
offset_right = 80.0
offset_bottom = 2.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Year:
"

[node name="Forced_event1" parent="." instance=ExtResource("32_dp5ps")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -376.0
offset_top = 171.0
offset_right = -126.0
offset_bottom = 296.0
grow_horizontal = 0

[node name="Forced_event2" parent="." instance=ExtResource("32_dp5ps")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 366.0
offset_right = -125.0
offset_bottom = 491.0
grow_horizontal = 0

[node name="Type-BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 32.0
offset_right = 1192.0
offset_bottom = 91.0
color = Color(0.821836, 0.773756, 0, 1)

[node name="Type-label" type="Label" parent="Type-BG"]
layout_mode = 0
offset_right = 191.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_rqw05")
theme_override_font_sizes/font_size = 25
text = "Type: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="Maximize_forced_event" from="Forced_event1" to="." method="Maximize_Forced_Event_1"]
